--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.26.4
 inflection==0.5.1
+iniconfig==2.0.0
 jsonschema==4.18.4
 jsonschema-specifications==2023.7.1
 mypy-extensions==1.0.0
@@ -17,7 +18,10 @@ packaging==23.1
 pathspec==0.11.1
 Pillow==10.0.0
 platformdirs==3.9.1
+pluggy==1.3.0
+psycopg2-binary==2.9.6
 PyJWT==2.8.0
+pytest==7.4.3
 pytz==2023.3
 PyYAML==6.0.1
 referencing==0.30.0
@@ -25,5 +29,4 @@ rpds-py==0.9.2
 sqlparse==0.4.4
 tzdata==2023.3
 uritemplate==4.1.1
-psycopg2-binary==2.9.6
-
+python-dotenv==1.0.0
