--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ pathspec==0.11.1
 Pillow==10.0.0
 platformdirs==3.9.1
 pluggy==1.3.0
-psycopg2-binary==2.9.6
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 pytest==7.4.3
 pytz==2023.3
@@ -30,3 +30,5 @@ sqlparse==0.4.4
 tzdata==2023.3
 uritemplate==4.1.1
 python-dotenv==1.0.0
+fastapi~=0.104.1
+requests~=2.31.0
